tests/fixtures/pass/infer_nominal_from_expected.sali
let Cell(T: type) = struct(value: T)

let main(): i32 = {
  let cell: Cell(i64) = Cell(_)(42)
  if cell.value == 42 { 42 } else { 0 }
}
