tests/fixtures/fail/generic_extend_trait_pending.sali
let Cell(T: type) = struct(value: T)
let Marker = trait {}

extend(T: type) Cell(T): Marker {}

let main(): i32 = 0
